tests/paczka1/small_fuzzy/50265644.err
Error in line 7: S577 S577 13,0
Error in line 12: Q1w1PnBcR A102 83,0
